hide overflow. Hopefully fixes mobile view bug

--- a/styles_mobile.css
+++ b/styles_mobile.css
@@ -10,6 +10,7 @@
         height: auto;
         margin: 0;
         padding: 0;
+        overflow: hidden;
     }
 
     header {
